--- a/Method_Of_LinesIGP.ipynb
+++ b/Method_Of_LinesIGP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f339a652f0cd4f2a4236ca06829c9ab605a9fe7c3ccea8f95a6eb3679bf0ce36"
+  "signature": "sha256:330849cf44ccd92bb83c34e51ddf74b2a211ce945e9c6a7086fb221d8c6ef36f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,8 +18,6 @@
       "# <codecell>\n",
       "\n",
       "# coding: utf-8\n",
-      "%matplotlib inline\n",
-      "#Imprimir Rho - Borboletas\n",
       "import matplotlib\n",
       "import numpy as np\n",
       "import scipy.integrate\n",
@@ -31,7 +29,7 @@
       "'''\n",
       "Method of lines - Intraguild Predation + Diffusion\n",
       "Quimiostatic growth for resource\n",
-      "Using adimensionlization\n",
+      "Already using adimensionlization\n",
       "'''\n",
       "\n",
       "#Parametros\n",
@@ -48,7 +46,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
