Ajustei as expressões do método variacional para ordem 3

--- a/Method_Of_LinesIGP_MAX.ipynb
+++ b/Method_Of_LinesIGP_MAX.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.12"
   },
   "name": "",
-  "signature": "sha256:28516ec1b0e81ec857756ce8d330abad186cc59e577853bdc547a6af9a3bd68d"
+  "signature": "sha256:fd449e2b92e0fb7990016f8a83127bddd57571813f15905dfdd8c49ad3fae9d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -59,7 +59,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -87,7 +87,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -128,7 +128,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -237,7 +237,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -275,7 +275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -290,17 +290,17 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#Integre um caso aqui\n",
-      "DR = 0.0\n",
+      "DR = 1.0\n",
       "D1 = 1.0\n",
       "D2 = 2.0\n",
-      "mu = 10\n",
+      "mu = 20\n",
       "l = 1\n",
       "d_r = DR/l**2\n",
       "d_1 = D1/l**2\n",
@@ -316,13 +316,13 @@
       "y0 = np.r_[R0,C10,C20]\n",
       "sol = scipy.integrate.odeint(ddt,y0,t) \n",
       "sol = np.array(sol)\n",
-      "np.save('Method_Of_LinesIGP_DR=%.3f,D1=%.3f,D2=%.3f,l=%.3f,mu=%.3f,gamma=%.3f,alpha=%.f,beta=%.f.npy'\n",
+      "np.save('Method_Of_LinesIGP_l=%.3f,DR=%.3f,D1=%.3f,D2=%.3f,mu=%.3f,gamma=%.3f,alpha=%.f,beta=%.f.npy'\n",
       "            % (l,DR,D1,D2,mu,gamma,alpha,beta),sol)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
