Não mudei muito. Só para plotar os gráficos de oscilação vendo as amplitudes variarem.

--- a/Bif_Numerical_Integration_vs_Var_method.ipynb
+++ b/Bif_Numerical_Integration_vs_Var_method.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.12"
   },
   "name": "",
-  "signature": "sha256:d597b97431a2fea73da8e23689bb3772493f8cff69866e37aedf7b2bce6108cf"
+  "signature": "sha256:046d7a3199f404c4e86a72781e10f818d71eeb69f3a57b6dee8c0a5c386b6a54"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -64,6 +64,97 @@
       }
      ],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#plot both populations across time (center of patch)\n",
+      "\n",
+      "DR = 1.0\n",
+      "D1 = 1.0\n",
+      "D2 = 6.0\n",
+      "mu = 15\n",
+      "l = 0.5 + 0.125*3\n",
+      "d_r = DR/l**2\n",
+      "d_1 = D1/l**2\n",
+      "d_2 = D2/l**2\n",
+      "t = np.linspace(0,Tmax,N)\n",
+      "x = np.linspace(0,np.pi,M)\n",
+      "m1 = 0.95\n",
+      "m2 = 1.05\n",
+      "gamma = 0.5\n",
+      "alpha = 2\n",
+      "beta = 8\n",
+      "ORDER = 1\n",
+      "\n",
+      "sol_num = np.load('Method_Of_LinesIGP_amplitude=%d,l=%.3f,DR=%.3f,D1=%.3f,D2=%.3f,mu=%.3f,gamma=%.3f,beta=%.f.npy'\n",
+      "            % (amplitude,l,DR,D1,D2,mu,gamma,beta))\n",
+      "\n",
+      "sol_var = np.load('Var_Method_ORDER=%d_l=%.3f,DR=%.3f,D1=%.3f,D2=%.3f,mu=%.3f,gamma=%.3f,beta=%.f.npy'\n",
+      "            % (ORDER,l,DR,D1,D2,mu,gamma,beta))\n",
+      "\n",
+      "R = np.transpose(sol_num[:,0:M])\n",
+      "C1 = np.transpose(sol_num[:,M:2*(M)])\n",
+      "C2 = np.transpose(sol_num[:,2*(M):])\n",
+      "Final_Time = 500\n",
+      "\n",
+      "\n",
+      "\n",
+      "plt.plot(t[-Final_Time:],R[M/2,-Final_Time:],color = 'green')\n",
+      "plt.plot(t[-Final_Time:],C1[M/2,-Final_Time:],color = 'blue')\n",
+      "plt.plot(t[-Final_Time:],C2[M/2,-Final_Time:],color = 'red')\n",
+      "\n",
+      "if DR > 0:\n",
+      "    \n",
+      "    if ORDER == 3:\n",
+      "    \n",
+      "    #Third Order\n",
+      "    \n",
+      "        U1 = sol[:,0]\n",
+      "        U2 = sol[:,1]\n",
+      "        U3 = sol[:,2]\n",
+      "        U4 = sol[:,3]\n",
+      "        U5 = sol[:,4]\n",
+      "        U6 = sol[:,5]\n",
+      "\n",
+      "        plt.plot(t[-Final_Time:],U1[-Final_Time:] - U2[-Final_Time:], color = 'green')\n",
+      "        plt.plot(t[-Final_Time:],U3[-Final_Time:] - U4[-Final_Time:], color = 'blue')\n",
+      "        plt.plot(t[-Final_Time:],U5[-Final_Time:] - U6[-Final_Time:], color = 'red')\n",
+      "        #plt.axis([950,1000,0,5.5])\n",
+      "        \n",
+      "        \n",
+      "    elif ORDER == 1:\n",
+      "\n",
+      "        #First Order\n",
+      "\n",
+      "        B1B2 = sol[:,0]\n",
+      "        A1 = sol[:,1]\n",
+      "        A2 = sol[:,2]\n",
+      "        #plt.plot(t[-Final_Time:],B1B2[-Final_Time:], color = 'green')\n",
+      "        #plt.plot(t[-Final_Time:],A1[-Final_Time:], color = 'blue')\n",
+      "        plt.plot(t[-Final_Time:],A2[-Final_Time:], color = 'red')\n",
+      "        plt.axis([975,Tmax,0,10])\n",
+      "    \n",
+      "            \n",
+      "if DR == 0:\n",
+      "    B1 = sol[:,0]\n",
+      "    B2 = sol[:,1]            \n",
+      "    A1 = sol[:,2]\n",
+      "    A2 = sol[:,3]\n",
+      "    plt.plot(t[-Final_Time:],B1[-Final_Time:] - B2[-Final_Time:], color = 'green')\n",
+      "    plt.plot(t[-Final_Time:],A1[-Final_Time:], color = 'blue')\n",
+      "    plt.plot(t[-Final_Time:],A2[-Final_Time:], color = 'red')\n",
+      "    #plt.axis([0,Tmax,0,20])\n",
+      "    \n",
+      "#plt.axis([0,np.pi,0,5])\n",
+      "plt.xlabel(r\"$t'$\")\n",
+      "plt.ylabel(r\"Population density at $x' = \\pi/2$\")\n",
+      "plt.legend(loc = 'best',prop={'size':15})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
